# stackProcessing

./: .gitignore  .tmp_check_sample_graphs.fsx  C:\Users\Public\biolog.txt  Concepts.md  Directory.Build.targets  Framework.md  Image.md  MonadRelations.md  Program.fs  Program1.fs  README.md  SlimPipeline.md  SmartImagePipeline.fs  StackProcessing.md  StackProcessing.sln  UPSTREAM_BUGS.md  cheatsheet.md  convolve3d.fs  convolve3d.fsproj  coreFramework.md  fsharp_loc.csv  fsharp_loc.numbers  gitHistory.sh  histogram.fs  histogram.fsproj  howToAnalyze.txt  log.txt  memoryAwarePipeline.fsproj  moduleBoundariesToWorkFor.md  multiplyConstant.fs  multiplyConstant.fsproj  multiplyConstantOperator.fs  multiplyConstantOperator.fsproj  multiplyMask.fs  multiplyMask.fsproj  notes.txt  overview.md  planForDeferredComputation.md  showImage.fs  showImage.fsproj  (+5 more)
.claude/: settings.local.json
AsyncSeqExtensions/: AsyncSeqExtensions.fs  AsyncSeqExtensions.fsi  AsyncSeqExtensions.fsproj
Core/: Core.fs  Core.fsi  Core.fsproj  Ops.fs  Processing.fs  Routing.fs  SourceSink.fs  SourceSink.fsi
CoreTypes/: CoreTypes.fsproj  Types.fs
IRefCounting/: IRefCounting.fsproj
Image/: Image.fs  Image.fsi  Image.fsproj  ImageClass.fs  ImageClass.fsproj  ImageFunctions.fs  ImageOld.fs  ImageOps.fs  ImageTest.fs  old.fs  simpleTest.fsx  tmp.fs
Image.Tests/: ArithmeticOps.fs  ArithmeticSupportOpsTests.fs  ArithmeticTests.fs  ArrayHelpers.fs  Image.Tests.fsproj  IterationsTests.fs  PixelBoxing.fs  PixelBoxingTests.fs  Tests.fs  TestsWFunctions.fs  VectorHelperTests.fs  assorted.fs  casting.fs  castingTests.fs  compareableTests.fs  coverage.info  indexing.fs  indexingTests.fs  mathFunction.fs  memoryHelper.fs  memoryHelperTests.fs  runCoverlet  simpleFunctionTests.fs
Image.Tests/coverage/: coverage.cobertura.xml
ImageAnalysisLib.Tests/: ImageAnalysisLib.Tests.fsproj  Tests.fs  Tests_ex.fs
Pipeline/: Pipeline.fs  Pipeline.fsi  Pipeline.fsproj  Processing.fs
Processing/: Processing.fs  Processing.fsi  Processing.fsproj
Slice/: Slice.fs  Slice.fsi  Slice.fsproj
SlimPipeline/: SlimPipeline.fs  SlimPipeline.fsi  SlimPipeline.fsproj
SmartImagePipeline/: Library.fs  SmartImagePipeline.fs  SmartImagePipeline.fsproj
StackPipeline/: Core.fs  Processing.fs  Routing.fs  Slice.fs  StackPipeline.fs  StackPipeline.fsi  StackPipeline.fsproj  imageSlice.fs  pipelineIO.fs
StackProcessing/: Processing.fs  Slice.fs  StackProcessing.fs  StackProcessing.fsi  StackProcessing.fsproj
Studio/: App.axaml.fs  Program.fs  Studio.fsproj  ViewLocator.fs
Studio/Services/: MyNodeFactory.fs
Studio/ViewModels/: ViewModelBase.fs
Studio/Views/: MainView.axaml  MainView.axaml.fs  MainWindow.axaml  MainWindow.axaml.fs
Vector/: Vector.fs  Vector.fsproj
aotThresholdProbe/: Program.fs  README.md  aotThresholdProbe.fsproj  publish-aot.sh
benchmarks/: .gitignore  README.md  run_all.sh  run_lmip_pdf_benchmarks.sh  run_zarr_chunk_comparison_fast.sh  run_zarr_chunk_comparison_slow.sh  run_zarr_filesystem_benchmark.sh
benchmarks/InMemoryBoxMean.Benchmarks/: InMemoryBoxMean.Benchmarks.fsproj  Program.fs
benchmarks/InMemoryConvolution.Benchmarks/: Program.fs
benchmarks/cpp-itk/: CMakeLists.txt  benchmark_itk.cxx
lib/: README.txt
lowlevel/: CMakeLists.txt  build.ps1  build.sh  lowlevel.cpp
native/StackProcessing.NativeMedian/: CMakeLists.txt  MedianNthElement.cpp  build.sh  lowlevel.cpp
notes/: ArrayBackedImageExperiment.md  ArrayPoolZarrSimdRestartNotes.md  ChunkBackboneStageGaps.md  ChunkFftStreamingSummary.md  ChunkPayload.md  ChunkSharpFftwStreamingSummary.md  ChunkSimdOptimizationIdeas.md  ChunkSpeedupNotes.md  ChunkSpeedupNotes.rtf  ChunkTrimmedPublishNotes.md  Concepts.md  ConnectedComponentsOptimizationOptions.md  ConvolutionStreamingNotes.md  CostModelCalibration.md  DeveloperReleaseProcess.md  Image.md  NativeTiffLowLevelNotes.md  NativeTiffMigrationPlan.md  SlimPipeline.md  StackProcessing.md  UPSTREAM_BUGS.md  ZarrNetChunkApiWish.md  ZarrNetLocalWriteFastPath.md  ZarrNetParallelChunkIo.md  ZarrNetZeroCopyChunkIo.md  codexQuestionsBank.md  codexQuestionsBank.rtf  dsl-stage-graph-enrichment.md  fsharp_loc.csv  fsharp_loc.numbers  howToAnalyze.md  howToAnalyze.txt  planForDeferredComputation.md  simpleITKClasses.txt~  simpleITKClassesClassification.csv  simpleITKClassesClassification.numbers  supportingSoftware.md
old/: Slice.fs  oldProcessing.fs  simpleITKWrappers.fs
pipelineIO/: pipelineIO.fs  pipelineIO.fsproj
samples/: 20250819_gather_18.numbers  20251014_runAll24.csv  SAMPLE_RUN_FIXES.md  gather.sh  runAll.sh
scripts/: stackprocessing.fsx
simpleITKWrappers/: simpleITKWrappers.fs  simpleITKWrappers.fsproj
src/: src.sln
test/: 20250815_gather_1024_3.numbers  20250815_gather_30.numbers  20250819_gather_24.numbers  20250819_gather_30.numbers  20251014_runAll30.csv  computeStats.fs  computeStats.fsproj  computeStats.fsproj.out  connectedComponents.fs  connectedComponents.fsproj  connectedComponents.fsproj.out  convolve3d.fs  convolve3d.fsproj  convolve3d.fsproj.out  convolve3dOp.fs  convolve3dOp.fsproj  copy.fs  copy.fsproj  copy.fsproj.out  empty.fs  empty.fsproj  empty.fsproj.out  erode.fs  erode.fsproj  erode.fsproj.out  finiteDiff3D.fs  finiteDiff3D.fsproj  finiteDiff3D.fsproj.out  foo  gather.csv  gather.sh  histogram.fs  histogram.fsproj  histogram.fsproj.out  histogramShared.fs  histogramShared.fsproj  histogramShared.fsproj.out  multiplyConstant.fs  multiplyConstant.fsproj  multiplyConstant.fsproj.out  (+29 more)
(+5393 files in other folders)
